# sqlite-utils-jq

./: pyproject.toml  sqlite_utils_jq.py
tests/: test_jq.py
